--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,3 +1,5 @@
+<app-nav />
+
 <div class="card bg-base-100 w-1/2 mx-auto p-10 mt-10 shadow-xl">
   <h2 class="text-3xl">{{ title() }}</h2>
   <ul class="list">
