--- a/client/src/layout/nav/nav.html
+++ b/client/src/layout/nav/nav.html
@@ -12,12 +12,11 @@
       <a>Messages</a>
     </nav>
     <div class="flex align-middle ml-auto gap-3">
-      @if (loggedIn()) {
+      @if (accountService.currentUser(); as user) {
         <div class="dropdown">
           <div tabindex="0" role="button" class="flex items-center text-white text-xl gap-3 cursor-pointer">
             <img src="/user.png" alt="user avatar" class="w-8 h-8 rounded-full">
-<!--            Hardcoded name for now-->
-            <span>Name Here</span>
+            <span>{{user.displayName}}</span>
           </div>
           <ul tabindex="0" class="dropdown-content dropdown-end menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
             <li><a>Edit Profile</a></li>
